--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .heading {
+    @apply text-4xl text-slate-800 mb-8;
+  }
+
+  .responsive-width {
+    @apply w-[85%] lg:w-[65em] xl:w-[75em] 2xl:w-[85em]
+  }
+}
+
+:root {
+  --animate-duration: 0.3s !important;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
