updated site content

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .heading {
-    @apply text-4xl text-breen-900 mb-14 font-bold;
+    @apply text-4xl text-breen-800 mb-14 font-bold;
   }
 
   .responsive-width {
@@ -13,6 +13,10 @@
 
   .button {
     @apply px-8 py-4 rounded-md bg-breen-800 text-white shadow-[0px_30px_90px] shadow-breen-300 hover:shadow-[0px_22px_70px_4px] hover:shadow-breen-400 hover:bg-breen-700 transition-all duration-300;
+  }
+
+  .link {
+    @apply text-breen-800 underline;
   }
 }
 
