--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,6 +20,11 @@
   }
 }
 
+@font-face {
+  font-family: "Bahnschrift SemiBold SemiCondensed";
+  src: url("../fonts/Bahnschrift.ttf") format("truetype");
+}
+
 :root {
   --animate-duration: 0.3s !important;
   scroll-behavior: smooth;
