contact page with netlify form submissions

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,18 +11,21 @@
     @apply w-[85%] lg:w-[60em] xl:w-[75em] 2xl:w-[85em];
   }
 
-  .button {
+  .big-button {
     @apply px-8 py-4 rounded-md bg-breen-800 text-white shadow-[0px_30px_90px] shadow-breen-300 hover:shadow-[0px_22px_70px_4px] hover:shadow-breen-400 hover:bg-breen-700 transition-all duration-300;
+  }
+
+  .button {
+    @apply px-8 py-4 rounded-md bg-breen-800 text-white hover:shadow-[0px_10px_40px] hover:shadow-breen-400 hover:bg-breen-700 transition-all duration-300 cursor-pointer;
   }
 
   .link {
     @apply text-breen-800 underline;
   }
-}
 
-@font-face {
-  font-family: "Bahnschrift SemiBold SemiCondensed";
-  src: url("../fonts/Bahnschrift.ttf") format("truetype");
+  .text-input {
+    @apply rounded-md border-gray-300 focus:ring-breen-800 focus:border-breen-800;
+  }
 }
 
 :root {
