heading style changes

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .heading {
-    @apply text-4xl text-breen-800 mb-14 font-bold;
+    @apply text-4xl text-breen-800 font-bold;
   }
 
   .responsive-width {
